--- a/public/i18n/en.json
+++ b/public/i18n/en.json
@@ -2,5 +2,6 @@
   "title": "Multi-language app",
   "label": "Select another language!",
   "about": "About",
-  "home": "Home 1"
+  "home": "Home 1",
+  "lng": "en"
 }
