--- a/public/i18n/kk.json
+++ b/public/i18n/kk.json
@@ -2,5 +2,6 @@
   "title": "Салем!",
   "label": "Select another language!",
   "about": "Биз туралы",
-  "home": "Казашка"
+  "home": "Казашка",
+  "lng": "kk"
 }
