--- a/public/i18n/ru.json
+++ b/public/i18n/ru.json
@@ -2,5 +2,6 @@
   "title": "Привет",
   "label": "Select another language!",
   "about": "О нас",
-  "home": "Главная"
+  "home": "Главная",
+  "lng": "ru"
 }
