corrected the translation (Main)

--- a/public/i18n/en.json
+++ b/public/i18n/en.json
@@ -3,7 +3,7 @@
   "label": "Select another language!",
   "lng": "ru",
   "nav": {
-    "main": "Min",
+    "main": "Main",
     "aboutCompany": "About the company",
     "forInvestors": "For investors",
     "services": "Services",
