--- a/public/i18n/kk.json
+++ b/public/i18n/kk.json
@@ -39,7 +39,8 @@
   },
   "vacancies": {
     "conditions": "Шарттар:",
-    "tasks": "Тапсырмалар:"
+    "tasks": "Тапсырмалар:",
+    "vacancies": "Бос жұмыс орындары"
   },
   "common": {
     "moreDetailed": "Толығырақ",
